src/test/deca/context/invalid/return_void_float.deca
// Test la règle 3.24: Pas le droit de return float alors qu'on attend pas de return

class A  {
    void voidMethod(int x){
        return 3.14;
    }
}



// Resultat:

//TODOTEST